--- a/app/views/posts.html
+++ b/app/views/posts.html
@@ -1,6 +1,10 @@
-<div ng-repeat="(postId, post) in posts">
+<!--
+We need to use just a plain ng-repeat for post in posts since the firebase service is returning an array, and we'll
+be passing our post object to our delete function
+-->
+<div ng-repeat="post in posts">
     <a href="{{ post.url }}">{{ post.title }}</a>
-    [ <a ng-click="deletePost(postId)">delete</a> ]
+    [ <a ng-click="deletePost(post)">delete</a> ]
 </div>
 
 <form ng-submit="submitPost()">
