--- a/app/views/posts.html
+++ b/app/views/posts.html
@@ -4,7 +4,7 @@ be passing our post object to our delete function
 -->
 <div ng-repeat="post in posts">
     <a href="{{ post.url }}">{{ post.title }}</a>
-    [ <a ng-click="deletePost(post)">delete</a> ]
+    [ <a ng-click="deletePost(post)">Delete</a>, <a href="#/posts/{{ post.$id }}">comments</a> ] <!-- NOTE: the use of $id -->
 </div>
 
 <form ng-submit="submitPost()">
