added a navigation section; moved adding post to form in nav section; added filter to display host info from a url.

--- a/app/views/post.html
+++ b/app/views/post.html
@@ -1,5 +1,8 @@
-<div>
-    Click here -> <a href="{{post.url}}">{{post.title}}</a>
+<div class="info">
+    <a href="{{ post.url }}">
+        {{ post.title }}
+        <span class="url">({{ post.url | hostNameFromUrl }})</span>
+    </a>
 </div>
 
 <a href="#/posts">Back to posts</a>
