--- a/app/views/nav.html
+++ b/app/views/nav.html
@@ -21,6 +21,13 @@
             </div>
             <button type="submit" class="btn btn-default">Submit</button>
         </form>
+
+        <!-- the signedIn method is made availbale to the rootScope inside of AuthService-->
+        <ul class="nav navbar-nav navbar-right" ng-show="signedIn()">
+            <li>
+                <a href="#" ng-click="logout()">Logout</a>
+            </li>
+        </ul>
     </div>
     <!-- /.navbar-collapse -->
 </nav>
